--- a/DespidoTexto/nbproject/project.properties
+++ b/DespidoTexto/nbproject/project.properties
@@ -55,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=despido2.NewJFrame
+main.class=DespidoFormulario.NewJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
