--- a/DespidoTexto/nbproject/project.properties
+++ b/DespidoTexto/nbproject/project.properties
@@ -30,13 +30,15 @@ dist.jar=${dist.dir}/Despido.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jcalendar-1.4.jar=../../../../Dropbox/Programacion/jcalendar-1.4/lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\david\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\david\\Downloads\\jcalendar-1.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
