--- a/DespidoTexto/nbproject/project.properties
+++ b/DespidoTexto/nbproject/project.properties
@@ -31,14 +31,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\david\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\david\\Downloads\\jcalendar-1.4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
